--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,17 @@
             <version>1.18.22</version>
             <scope>provided</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-reload4j -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-reload4j</artifactId>
+            <version>1.7.36</version>
+        </dependency>
+
+
+
+
     </dependencies>
 
 </project>
