--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <allure.junit5.version>2.16.1</allure.junit5.version>
         <allure.junit5.assert.version>${allure.version}</allure.junit5.assert.version>
         <allure.maven.version>2.10.0</allure.maven.version>
+        <hamcrest.verstion>2.2</hamcrest.verstion>
 
 
         <maven.compiler.source>8</maven.compiler.source>
@@ -97,6 +98,13 @@
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-junit5-assert</artifactId>
             <version>${allure.junit5.assert.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest</artifactId>
+            <version>${hamcrest.verstion}</version>
             <scope>test</scope>
         </dependency>
 
