debugging and refactoring

--- a/dto-generator-examples/pom.xml
+++ b/dto-generator-examples/pom.xml
@@ -11,7 +11,7 @@
     </parent>
 
     <artifactId>dto-generator-examples</artifactId>
-    <version>${project.version}</version>
+    <version>0.1-ALPHA</version>
 
     <dependencies>
 
