--- a/dto-generator-api/pom.xml
+++ b/dto-generator-api/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>dto-generator-api</artifactId>
-    <version>${project.version}</version>
+    <version>0.1-ALPHA</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
