--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>laoruga</groupId>
     <artifactId>dto-generator-parent</artifactId>
     <packaging>pom</packaging>
-    <version>${project.version}</version>
+    <version>0.1-ALPHA</version>
 
     <modules>
         <module>dto-generator-api</module>
@@ -15,7 +15,6 @@
     </modules>
 
     <properties>
-        <project.version>0.1-ALPHA</project.version>
 
         <!-- testing -->
         <aspectj.version>1.9.2</aspectj.version>
@@ -124,9 +123,9 @@
                 <version>2.22.2</version>
                 <!--                <version>2.19</version>-->
                 <configuration>
-                    <includes>
-                        <include>**/*FirstSuite.java</include>
-                    </includes>
+<!--                    <includes>-->
+<!--                        <include>**/*Test.java</include>-->
+<!--                    </includes>-->
                     <argLine>
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                         -Dfile.encoding=UTF-8
