--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>laoruga</groupId>
     <artifactId>dto-generator-parent</artifactId>
     <packaging>pom</packaging>
-    <version>${project.version}</version>
+    <version>0.1-ALPHA</version>
 
     <modules>
         <module>dto-generator-api</module>
