--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,7 @@
                     <argLine>
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                         -Dfile.encoding=UTF-8
+                        --add-exports java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
                     </argLine>
                     <properties>
                         <!-- Junit 5 Interceptor -->
