--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -10,21 +10,21 @@
 #clone:
 #  depth: full    # SonarCloud scanner needs the full history to assign issues properly
 #
-#pipelines:
-#  default:
-#    - parallel:
-#        - step:
-#            name: Build and Test
-#            caches:
-#              - maven
-#            script:
-#              - mvn -B install org.sonarsource.scanner.maven:sonar-maven-plugin:sonar --file pom.xml
-#            after-script:
-#              # Collect checkstyle results, if any, and convert to Bitbucket Code Insights.
-#              - pipe: atlassian/checkstyle-report:0.3.0
-#        - step:
-#            name: Security Scan
-#            script:
-#              # Run a security scan for sensitive data.
-#              # See more security tools at https://bitbucket.org/product/features/pipelines/integrations?&category=security
-#              - pipe: atlassian/git-secrets-scan:0.5.1
+pipelines:
+  default:
+    - parallel:
+        - step:
+            name: Build and Test
+            caches:
+              - maven
+            script:
+              - mvn -B install org.sonarsource.scanner.maven:sonar-maven-plugin:sonar --file pom.xml
+            after-script:
+              # Collect checkstyle results, if any, and convert to Bitbucket Code Insights.
+              - pipe: atlassian/checkstyle-report:0.3.0
+        - step:
+            name: Security Scan
+            script:
+              # Run a security scan for sensitive data.
+              # See more security tools at https://bitbucket.org/product/features/pipelines/integrations?&category=security
+              - pipe: atlassian/git-secrets-scan:0.5.1
