--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -13,7 +13,7 @@ definitions:
           - maven
           - sonar
         script:
-          - mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
+          - mvn -B -X verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
         artifacts:
           - target/**
 
