--- a/dto-generator-api/pom.xml
+++ b/dto-generator-api/pom.xml
@@ -38,6 +38,7 @@
                             </execution>
                             <execution>
                                 <id>report</id>
+                                <phase>test</phase>
                                 <goals>
                                     <goal>report</goal>
                                 </goals>
