--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,7 @@
                 <version>2.22.2</version>
                 <configuration>
                     <argLine>
+                        @{argLine}
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                         -Dfile.encoding=UTF-8
                     </argLine>
