--- a/dto-generator/pom.xml
+++ b/dto-generator/pom.xml
@@ -2,25 +2,30 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <groupId>org.laoruga</groupId>
         <artifactId>dto-generator-parent</artifactId>
         <version>0.1-ALPHA</version>
     </parent>
+    <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>dto-generator-examples</artifactId>
+    <artifactId>dto-generator</artifactId>
     <version>0.1-ALPHA</version>
 
     <dependencies>
-
         <dependency>
-            <groupId>org.laoruga</groupId>
-            <artifactId>dto-generator</artifactId>
-            <version>0.1-ALPHA</version>
+            <groupId>com.github.mifmif</groupId>
+            <artifactId>generex</artifactId>
+            <version>1.0.2</version>
         </dependency>
-
     </dependencies>
+
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
+    </build>
 
 </project>
