--- a/dto-generator-examples/pom.xml
+++ b/dto-generator-examples/pom.xml
@@ -1,24 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>org.laoruga</groupId>
         <artifactId>dto-generator-parent</artifactId>
-        <version>0.1-ALPHA</version>
+        <version>1.3.0</version>
     </parent>
 
     <artifactId>dto-generator-examples</artifactId>
-    <version>0.1-ALPHA</version>
+    <version>1.3.0</version>
 
     <dependencies>
 
         <dependency>
             <groupId>org.laoruga</groupId>
             <artifactId>dto-generator</artifactId>
-            <version>0.1-ALPHA</version>
+            <version>1.3.0</version>
         </dependency>
 
     </dependencies>
