--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.laoruga</groupId>
     <artifactId>dto-generator-parent</artifactId>
     <packaging>pom</packaging>
-    <version>0.3.0-SNAPSHOT</version>
+    <version>1.3.0</version>
 
     <modules>
         <module>dto-generator</module>
@@ -28,7 +26,7 @@
         <hamcrest.verstion>2.2</hamcrest.verstion>
         <jacoco.version>0.8.7</jacoco.version>
 
-        <argLinePlaceholder></argLinePlaceholder>
+        <argLinePlaceholder />
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
@@ -37,7 +35,7 @@
         <connection>scm:git:git@bitbucket.org:ivalitov/dto-generator.git</connection>
         <developerConnection>scm:git:git@bitbucket.org:ivalitov/dto-generator.git</developerConnection>
         <url>https://bitbucket.org/ivalitov/dto-generator</url>
-        <tag>@{project.version}</tag>
+        <tag>1.3.0</tag>
     </scm>
 
     <dependencies>
