--- a/dto-generator-examples/pom.xml
+++ b/dto-generator-examples/pom.xml
@@ -5,18 +5,18 @@
     <parent>
         <groupId>org.laoruga</groupId>
         <artifactId>dto-generator-parent</artifactId>
-        <version>1.3.1</version>
+        <version>1.3.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>dto-generator-examples</artifactId>
-    <version>1.3.1</version>
+    <version>0.1-ALPHA</version>
 
     <dependencies>
 
         <dependency>
             <groupId>org.laoruga</groupId>
             <artifactId>dto-generator</artifactId>
-            <version>1.3.1</version>
+            <version>0.1-ALPHA</version>
         </dependency>
 
     </dependencies>
