--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>org.laoruga</groupId>
     <artifactId>dto-generator-parent</artifactId>
     <packaging>pom</packaging>
-    <version>1.3.2-SNAPSHOT</version>
+    <version>0.3.2-alpha-SNAPSHOT</version>
 
     <modules>
         <module>dto-generator</module>
