--- a/dto-generator/pom.xml
+++ b/dto-generator/pom.xml
@@ -3,12 +3,12 @@
     <parent>
         <groupId>org.laoruga</groupId>
         <artifactId>dto-generator-parent</artifactId>
-        <version>0.3.2-alpha-SNAPSHOT</version>
+        <version>0.3.2-alpha</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>dto-generator</artifactId>
-    <version>0.1-ALPHA</version>
+    <version>0.3.2-alpha</version>
 
     <dependencies>
         <dependency>
