--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>org.laoruga</groupId>
     <artifactId>dto-generator-parent</artifactId>
     <packaging>pom</packaging>
-    <version>0.3.2-alpha</version>
+    <version>0.3.3-alpha-SNAPSHOT</version>
 
     <modules>
         <module>dto-generator</module>
@@ -37,7 +37,7 @@
         <connection>scm:git:git@github.com:ivalitov/dto-generator.git</connection>
         <developerConnection>scm:git:git@github.com:ivalitov/dto-generator.git</developerConnection>
         <url>https://github.com/ivalitov/dto-generator</url>
-        <tag>0.3.2-alpha</tag>
+        <tag>1.3.1</tag>
     </scm>
 
     <dependencies>
