--- a/dto-generator-examples/pom.xml
+++ b/dto-generator-examples/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.laoruga</groupId>
         <artifactId>dto-generator-parent</artifactId>
-        <version>0.3.3-alpha</version>
+        <version>0.3.4-alpha-SNAPSHOT</version>
     </parent>
 
     <artifactId>dto-generator-examples</artifactId>
