--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.laoruga</groupId>
     <artifactId>dto-generator-parent</artifactId>
-    <version>0.3.4-alpha</version>
+    <version>0.3.5-alpha-SNAPSHOT</version>
 
     <packaging>pom</packaging>
 
@@ -39,7 +39,7 @@
         <connection>scm:git:git@github.com:ivalitov/dto-generator.git</connection>
         <developerConnection>scm:git:git@github.com:ivalitov/dto-generator.git</developerConnection>
         <url>https://github.com/ivalitov/dto-generator</url>
-        <tag>0.3.4-alpha</tag>
+        <tag>1.3.1</tag>
     </scm>
 
     <dependencies>
