--- a/dto-generator/pom.xml
+++ b/dto-generator/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.laoruga</groupId>
         <artifactId>dto-generator-parent</artifactId>
-        <version>0.3.5-alpha-SNAPSHOT</version>
+        <version>0.3.5-alpha</version>
     </parent>
 
     <packaging>jar</packaging>
