Explicit Jackson databind dependency

--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,13 @@
 
         <!-- Testing -->
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.14.2</version>
+            <scope>test</scope>
+        </dependency>
+
         <!-- Junit Platform -->
 
         <dependency>
