--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,3 +34,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: mvn -X -B -P coverage verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=ivalitov_dto-generator
+      - name: Allure Report with history
+        uses: simple-elf/allure-report-action@v1.6
+        with:
+          allure_results: build/allure-results
+          allure_report: allure-report
+          allure_history: allure-history
