--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Allure Report with history
         uses: simple-elf/allure-report-action@v1.6
         with:
-          allure_results: build/allure-results
+          allure_results: target/allure-results
           allure_report: allure-report
           allure_history: allure-history
 
